Added bridge from rabbitMQ (Innbets) and Kafka-Server